Revert change to tax rate delete button

--- a/src/Admin/Views/Tools/TaxRate.cshtml
+++ b/src/Admin/Views/Tools/TaxRate.cshtml
@@ -86,8 +86,8 @@
                             @rate.Rate%
                         </td>
                         <td>
-                            <a class="text-danger" data-id="@rate.Id" asp-controller="Tools" asp-action="TaxRateArchive" asp-route-stripeTaxRateId="@rate.Id">
-                                <i class="fa fa-trash fa-lg"></i>
+                            <a class="delete-button" data-id="@rate.Id" asp-controller="Tools" asp-action="TaxRateArchive" asp-route-stripeTaxRateId="@rate.Id">
+                                <i class="fa fa-trash fa-lg fa-fw"></i>
                             </a>
                         </td>
                     </tr>
