--- a/src/Admin/Views/Tools/CreateUpdateTransaction.cshtml
+++ b/src/Admin/Views/Tools/CreateUpdateTransaction.cshtml
@@ -33,7 +33,7 @@
             <div class="form-group">
                 <div class="mb-3">
                     <label asp-for="Type" class="form-label"></label>
-                    <select class="form-control" asp-for="Type" required
+                    <select class="form-select" asp-for="Type" required
                             asp-items="Html.GetEnumSelectList<Bit.Core.Enums.TransactionType>()"></select>
                 </div>
             </div>
