--- a/src/Admin/AdminConsole/Views/Providers/Edit.cshtml
+++ b/src/Admin/AdminConsole/Views/Providers/Edit.cshtml
@@ -34,16 +34,16 @@
     <h2>Billing</h2>
     <div class="row">
         <div class="col-sm">
-            <div class="mb-3">
-                <label asp-for="BillingEmail" class="form-label"></label>
+            <div class="form-group">
+                <label asp-for="BillingEmail"></label>
                 <input type="email" class="form-control" asp-for="BillingEmail" readonly='@(!canEdit)'>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-sm">
-            <div class="mb-3">
-                <label asp-for="BillingPhone" class="form-label"></label>
+            <div class="form-group">
+                <label asp-for="BillingPhone"></label>
                 <input type="tel" class="form-control" asp-for="BillingPhone">
             </div>
         </div>
@@ -68,8 +68,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
                 <div class="row">
                     <div class="col-sm">
                         <div class="form-group">
@@ -149,26 +147,25 @@
 @if (canEdit)
 {
     <!-- Modals -->
-    <div class="modal fade" id="requestDeletionModal" tabindex="-1" aria-labelledby="requestDeletionModalLabel" aria-hidden="true">
+    <div class="modal fade rounded" id="requestDeletionModal" tabindex="-1" aria-labelledby="requestDeletionModal" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title fw-bold" id="requestDeletionModalLabel">Request provider deletion</h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content rounded">
+                <div class="p-3">
+                    <h4 class="font-weight-bolder" id="exampleModalLabel">Request provider deletion</h4>
                 </div>
                 <div class="modal-body">
-                    <span class="fw-light">
+                    <span class="font-weight-light">
                         Enter the email of the provider admin that will receive the request to delete the provider portal.
                     </span>
                     <form>
-                        <div class="mb-3">
+                        <div class="form-group">
                             <label for="provider-email" class="col-form-label">Provider email</label>
                             <input type="email" class="form-control" id="provider-email">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-primary btn-pill" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-outline-primary btn-pill" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-danger btn-pill" onclick="initiateDeleteProvider('@Model.Provider.Id')">Send email request</button>
                 </div>
             </div>
@@ -178,21 +175,21 @@
         <div class="modal-dialog">
             <div class="modal-content rounded">
                 <div class="p-3">
-                    <h4 class="fw-bolder" id="exampleModalLabel">Delete provider</h4>
+                    <h4 class="font-weight-bolder" id="exampleModalLabel">Delete provider</h4>
                 </div>
                 <div class="modal-body">
-                    <span class="fw-light">
+                    <span class="font-weight-light">
                         This action is permanent and irreversible. Enter the provider name to complete deletion of the provider and associated data.
                     </span>
                     <form>
-                        <div class="mb-3">
+                        <div class="form-group">
                             <label for="provider-name" class="col-form-label">Provider name</label>
                             <input type="text" class="form-control" id="provider-name">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-primary btn-pill" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-outline-primary btn-pill" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-danger btn-pill" onclick="deleteProvider('@Model.Provider.Id');">Delete provider</button>
                 </div>
             </div>
@@ -202,12 +199,12 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content rounded">
                 <div class="modal-body">
-                    <h4 class="fw-bolder">Cannot Delete @Model.Name</h4>
-                    <p class="fw-lighter">You must unlink all clients before you can delete @Model.Name.</p>
+                    <h4 class="font-weight-bolder">Cannot Delete @Model.Name</h4>
+                    <p class="font-weight-lighter">You must unlink all clients before you can delete @Model.Name.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-primary btn-pill" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary btn-pill" data-bs-dismiss="modal">Ok</button>
+                    <button type="button" class="btn btn-outline-primary btn-pill" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary btn-pill" data-dismiss="modal">Ok</button>
                 </div>
             </div>
         </div>
@@ -217,14 +214,15 @@
 
     <div class="d-flex mt-4">
         <button type="submit" class="btn btn-primary" form="edit-form">Save</button>
-        <div class="ms-auto d-flex">
+        <div class="ml-auto d-flex">
             <button class="btn btn-danger" onclick="openRequestDeleteModal(@Model.ProviderOrganizations.Count())">Request Delete</button>
-            <button id="requestDeletionBtn" hidden="hidden" data-bs-toggle="modal" data-bs-target="#requestDeletionModal"></button>
+            <button id="requestDeletionBtn" hidden="hidden" data-toggle="modal" data-target="#requestDeletionModal"></button>
 
-            <button class="btn btn-outline-danger ms-2" onclick="openDeleteModal(@Model.ProviderOrganizations.Count())">Delete</button>
-            <button id="deleteBtn" hidden="hidden" data-bs-toggle="modal" data-bs-target="#DeleteModal"></button>
+            <button class="btn btn-outline-danger ml-2" onclick="openDeleteModal(@Model.ProviderOrganizations.Count())">Delete</button>
+            <button id="deleteBtn" hidden="hidden" data-toggle="modal" data-target="#DeleteModal"></button>
 
-            <button id="linkAccWarningBtn" hidden="hidden" data-bs-toggle="modal" data-bs-target="#linkedWarningModal"></button>
+            <button id="linkAccWarningBtn" hidden="hidden" data-toggle="modal" data-target="#linkedWarningModal"></button>
+
         </div>
     </div>
 }
