Restore Bootstrap 4 link styling behavior
- Remove default text decoration
- Add underline only on hover

--- a/src/Admin/Sass/site.scss
+++ b/src/Admin/Sass/site.scss
@@ -53,3 +53,11 @@ h3 {
 .form-check-input {
     margin-top: .45rem;
 }
+
+a {
+    text-decoration: none;
+    
+    &:hover {
+      text-decoration: underline;
+    }
+}
