--- a/src/Admin/Views/Tools/StripeSubscriptions.cshtml
+++ b/src/Admin/Views/Tools/StripeSubscriptions.cshtml
@@ -135,7 +135,7 @@
         <div id="selectAll" class="d-none col-8">
             All @Model.Items.Count subscriptions on this page are selected.<br/>
             <button type="button" id="selectAllElement" class="btn btn-link p-0 pb-1" onclick="onSelectAll()">Click here to select all subscriptions for this search.</button>
-            <span id="selectedAllConfirmation" class="d-none text-muted">
+            <span id="selectedAllConfirmation" class="d-none text-body-secondary">
                 <i class="fa fa-check"></i> All subscriptions for this search are selected.
             </span>
             <div class="alert alert-warning mt-2" role="alert">
