--- a/src/Admin/AdminConsole/Components/Pages/Organizations/ListOrganizationsPage.razor
+++ b/src/Admin/AdminConsole/Components/Pages/Organizations/ListOrganizationsPage.razor
@@ -1,156 +1,124 @@
 @page "/organizations2"
 @using Bit.Core.Repositories
 @using Bit.Core.Settings
-@using Bit.Infrastructure.EntityFramework.AdminConsole.Models
+@using Bit.Admin.AdminConsole.Components.Shared.Table
 
 @inject IGlobalSettings GlobalSettings
 @inject IOrganizationRepository OrganizationRepository
 
-<!-- You cannot set the title part of a layout due to the rendering order. Or you have to use JavaScript, which is not
-ideal. -->
 <BitPage Title="Organizations">
-    <EditForm class="form-inline mb-2" FormName="@SearchFormName" Model="SearchForm" OnSubmit="OnSearchAsync">
-        <DataAnnotationsValidator/>
-        <ValidationSummary/>
-
-        <label class="sr-only" for="name-filter">Name</label>
-        <InputText @bind-Value="SearchForm.Name" class="form-control mb-2 mr-2" id="name-filter" placeholder="Name"/>
-        <label class="sr-only" for="email-filter">User email</label>
-        <InputText @bind-Value="SearchForm.Email" class="form-control mb-2 mr-2" id="email-filter" placeholder="User email"/>
-
-        @if (!Model.SelfHosted)
-        {
-            <label class="sr-only" asp-for="Paid">Customer</label>
-            <InputSelect @bind-Value="SearchForm.Paid" class="form-control mb-2 mr-2">
-                <option value="">-- Customer --</option>
-                <option value="true">Paid</option>
-                <option value="false">Freeloader</option>
-            </InputSelect>
-        }
-        <button type="submit" class="btn btn-primary mb-2" title="Search"><i class="fa fa-search"></i> Search</button>
-    </EditForm>
-
-    <div class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th style="width: 190px;">Plan</th>
-                <th style="width: 80px;">Seats</th>
-                <th style="width: 150px;">Created</th>
-                <th style="width: 170px; min-width: 170px;">Details</th>
-            </tr>
-            </thead>
-            <tbody>
-            @if (Model.Items is { Count: > 0 })
+    <EditForm FormName="@SearchFormName" Model="SearchForm" OnValidSubmit="OnSearchAsync">
+        <div class="form-inline mb-2">
+            <DataAnnotationsValidator/>
+            <label class="sr-only" for="name-filter">Name</label>
+            <InputText @bind-Value="SearchForm.Name" class="form-control mb-2 mr-2" id="name-filter" placeholder="Name"/>
+            <label class="sr-only" for="email-filter">User email</label>
+            <InputText @bind-Value="SearchForm.Email" class="form-control mb-2 mr-2" id="email-filter" placeholder="User email"/>
+            @if (!Model.SelfHosted)
             {
-                @foreach (var organization in Model.Items)
+                <label class="sr-only" asp-for="Paid">Customer</label>
+                <InputSelect @bind-Value="SearchForm.Paid" class="form-control mb-2 mr-2">
+                    <option value="">-- Customer --</option>
+                    <option value="true">Paid</option>
+                    <option value="false">Freeloader</option>
+                </InputSelect>
+            }
+            <button type="submit" class="btn btn-primary mb-2" title="Search"><i class="fa fa-search"></i> Search</button>
+        </div>
+
+        <div class="table-responsive">
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th style="width: 190px;">Plan</th>
+                    <th style="width: 80px;">Seats</th>
+                    <th style="width: 150px;">Created</th>
+                    <th style="width: 170px; min-width: 170px;">Details</th>
+                </tr>
+                </thead>
+                <tbody>
+                @if (Model.Items is { Count: > 0 })
                 {
-                    <tr>
-                        <td>
-                            <a href="@($"/organizations/edit/{organization.Id}")">@organization.DisplayName()</a>
-                        </td>
-                        <td>
-                            @organization.Plan
-                        </td>
-                        <td>
-                            @organization.Seats
-                        </td>
-                        <td>
-                            <span title="@organization.CreationDate.ToString()">
-                                @organization.CreationDate.ToShortDateString()
-                            </span>
-                        </td>
-                        <td>
-                            @if (!GlobalSettings.SelfHosted)
-                            {
-                                if (!string.IsNullOrWhiteSpace(organization.GatewaySubscriptionId))
+                    @foreach (var organization in Model.Items)
+                    {
+                        <tr>
+                            <td>
+                                <a href="@($"/organizations/edit/{organization.Id}")">@organization.DisplayName()</a>
+                            </td>
+                            <td>
+                                @organization.Plan
+                            </td>
+                            <td>
+                                @organization.Seats
+                            </td>
+                            <td>
+                                <span title="@organization.CreationDate.ToString()">
+                                    @organization.CreationDate.ToShortDateString()
+                                </span>
+                            </td>
+                            <td>
+                                @if (!GlobalSettings.SelfHosted)
                                 {
-                                    <i class="fa fa-usd fa-lg fa-fw" title="Paid"></i>
+                                    if (!string.IsNullOrWhiteSpace(organization.GatewaySubscriptionId))
+                                    {
+                                        <i class="fa fa-usd fa-lg fa-fw" title="Paid"></i>
+                                    }
+                                    else
+                                    {
+                                        <i class="fa fa-smile-o fa-lg fa-fw text-muted" title="Freeloader"></i>
+                                    }
+                                }
+                                @if (organization.MaxStorageGb is > 1)
+                                {
+                                    <i class="fa fa-plus-square fa-lg fa-fw"
+                                       title="Additional Storage, @(organization.MaxStorageGb - 1) GB">
+                                    </i>
                                 }
                                 else
                                 {
-                                    <i class="fa fa-smile-o fa-lg fa-fw text-muted" title="Freeloader"></i>
+                                    <i class="fa fa-plus-square-o fa-lg fa-fw text-muted"
+                                       title="No Additional Storage">
+                                    </i>
                                 }
-                            }
-                            @if (organization.MaxStorageGb is > 1)
-                            {
-                                <i class="fa fa-plus-square fa-lg fa-fw"
-                                   title="Additional Storage, @(organization.MaxStorageGb - 1) GB">
-                                </i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-plus-square-o fa-lg fa-fw text-muted"
-                                   title="No Additional Storage">
-                                </i>
-                            }
-                            @if (organization.Enabled)
-                            {
-                                <i class="fa fa-check-circle fa-lg fa-fw"
-                                   title="Enabled, expires @(organization.ExpirationDate?.ToShortDateString() ?? "-")">
-                                </i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-times-circle-o fa-lg fa-fw text-muted" title="Disabled"></i>
-                            }
-                            @if (organization.TwoFactorIsEnabled())
-                            {
-                                <i class="fa fa-lock fa-lg fa-fw" title="2FA Enabled"></i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-unlock fa-lg fa-fw text-muted" title="2FA Not Enabled"></i>
-                            }
-                        </td>
+                                @if (organization.Enabled)
+                                {
+                                    <i class="fa fa-check-circle fa-lg fa-fw"
+                                       title="Enabled, expires @(organization.ExpirationDate?.ToShortDateString() ?? "-")">
+                                    </i>
+                                }
+                                else
+                                {
+                                    <i class="fa fa-times-circle-o fa-lg fa-fw text-muted" title="Disabled"></i>
+                                }
+                                @if (organization.TwoFactorIsEnabled())
+                                {
+                                    <i class="fa fa-lock fa-lg fa-fw" title="2FA Enabled"></i>
+                                }
+                                else
+                                {
+                                    <i class="fa fa-unlock fa-lg fa-fw text-muted" title="2FA Not Enabled"></i>
+                                }
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td colspan="5">No results to list.</td>
                     </tr>
                 }
-            }
-            else
-            {
-                <tr>
-                    <td colspan="5">No results to list.</td>
-                </tr>
-            }
-            </tbody>
-        </table>
-    </div>
+                </tbody>
+            </table>
+        </div>
 
-    <EditForm FormName="PaginationForm" Model="SearchForm" OnSubmit="OnSearchAsync">
         <nav>
             <ul class="pagination">
-                @if (Model.Items != null && Model.PreviousPage.HasValue)
+                @if (Model.Items != null)
                 {
-                <li class="page-item">
-                    <a class="page-link" asp-action="Index" asp-route-page="@Model.PreviousPage.Value"
-                       asp-route-count="@Model.Count" asp-route-userEmail="@SearchForm.Email"
-                       asp-route-name="@SearchForm.Name" asp-route-paid="@SearchForm.Paid">
-                        Previous
-                    </a>
-                </li>
-                }
-                else
-                {
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1">Previous</a>
-                </li>
-                }
-                @if (Model.Items != null && Model.NextPage.HasValue)
-                {
-                <li class="page-item">
-                    <a class="page-link" asp-action="Index" asp-route-page="@Model.NextPage.Value"
-                       asp-route-count="@Model.Count" asp-route-userEmail="@SearchForm.Email"
-                       asp-route-name="@SearchForm.Name" asp-route-paid="@SearchForm.Paid">
-                        Next
-                    </a>
-                </li>
-                }
-                else
-                {
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1">Next</a>
-                </li>
+                    <PageLink FormKey="SearchForm.Page" Label="Previous" Page="@Model.PreviousPage" />
+                    <PageLink FormKey="SearchForm.Page" Label="Next" Page="@Model.NextPage" />
                 }
             </ul>
         </nav>
