--- a/src/Admin/AdminConsole/Views/Organizations/Index.cshtml
+++ b/src/Admin/AdminConsole/Views/Organizations/Index.cshtml
@@ -81,7 +81,7 @@
                                     <i class="fa fa-smile-o fa-lg fa-fw text-body-secondary" title="Freeloader"></i>
                                 }
                             }
-                            <i class="fa fa-plus-square fa-lg fa-fw"
+                            <i class="fa fa-hdd-o fa-lg fa-fw"
                                title="Used Storage, @org.StorageGb GB"></i>
                             @if(org.Enabled)
                             {
