update copy for domain claimed by organization email

--- a/src/Core/MailTemplates/Handlebars/AdminConsole/DomainClaimedByOrganization.html.hbs
+++ b/src/Core/MailTemplates/Handlebars/AdminConsole/DomainClaimedByOrganization.html.hbs
@@ -9,9 +9,8 @@
             <td style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; font-style: normal; font-weight: 400; font-size: 16px; line-height: 24px; margin-top: 30px; margin-bottom: 25px; margin-left: 35px; margin-right: 35px;">
                 <b>Here's what that means:</b>
                 <ul>
-                    <li>This account should only be used to store items related to {{OrganizationName}}</li>
-                    <li>Admins managing your Bitwarden organization manage your email address and other account settings</li>
-                    <li>Admins can also revoke or delete your account at any time</li>
+                    <li>Your administrators can delete your account at any time</li>
+                    <li>You cannot leave the organization</li>
                 </ul>
             </td>
         </tr>
