--- a/src/Core/MailTemplates/Handlebars/AdminConsole/DomainClaimedByOrganization.text.hbs
+++ b/src/Core/MailTemplates/Handlebars/AdminConsole/DomainClaimedByOrganization.text.hbs
@@ -1,8 +1,7 @@
 As a member of {{OrganizationName}}, your Bitwarden account is claimed and owned by your organization.
 
 Here's what that means:
-- This account should only be used to store items related to {{OrganizationName}}
-- Your admins managing your Bitwarden organization manages your email address and other account settings
-- Your admins can also revoke or delete your account at any time
+- Your administrators can delete your account at any time
+- You cannot leave the organization
 
 For more information, please refer to the following help article: Claimed Accounts (https://bitwarden.com/help/claimed-accounts)
